Fixed apportionment header column alignment

--- a/frontend/app/module/election/page/ElectionApportionmentPage.module.css
+++ b/frontend/app/module/election/page/ElectionApportionmentPage.module.css
@@ -47,6 +47,15 @@
 
 .apportionment_table {
   tr {
+    th {
+      /* Number or Fraction */
+      &:first-of-type,
+      &:nth-of-type(3),
+      &:nth-of-type(4),
+      &:nth-of-type(5) {
+        text-align: right;
+      }
+    }
     td {
       /* Number or Fraction */
       &:first-of-type,
